tests/fixtures/valid/builtins/min_max_builtin.py
# min and max builtins
lst: list[int] = [5, 2, 8, 1, 9, 3]
print(min(lst))
print(max(lst))

# With multiple args
print(min(10, 5, 20))
print(max(10, 5, 20))
