tests/fixtures/invalid/max_int_set.py
# Cannot call max() with Int, Set[int]
x = max(1, {1, 2, 3})
